--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
   "name": "taimed",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.4",
+    "express-query-boolean": "^2.0.0",
+    "dotenv": "^5.0.1",
+    "mongoose": "^5.0.10"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hensav/taimed.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hensav/taimed/issues"
+  },
+  "homepage": "https://github.com/hensav/taimed#readme",
+  "description": ""
 }
