--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.4",
-    "express-query-boolean": "^2.0.0",
     "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "express-query-boolean": "^2.0.0",
     "mongoose": "^5.0.10"
   },
   "devDependencies": {},
